# zx-lean

./: .gitignore  CLAUDE.md  IDEAS.md  Main.lean  README.md  Tests.lean  ZxLean.lean  lakefile.lean
.github/workflows/: ci.yml  pyzx_daemon_ci.yml  zx_lean_ci.yml
Tests/: IdentityRemoval.lean  SpiderFusion.lean
ZxLean/: Tactics.lean  Utils.lean  Visualize.lean  ZXCalculus.lean  ZXDiagram.lean
ZxLean/DerivedRules/: PiPi.lean
ZxLean/Rules/: IdentityRemoval.lean  SpiderFusion.lean
pyzx_daemon/: README.md  app.py  pyproject.toml
pyzx_daemon/lib/: lean_to_pyzx.py
pyzx_daemon/tests/: test_diagram.py
widget/: package.json
zx_view_widget/: package-lock.json  package.json  rollup.config.js  tsconfig.json
zx_view_widget/src/: zxDiagram.tsx
zx_view_widget/src/__tests__/: zxDiagram.test.tsx
