[project]
name = "pyzx-daemon"
version = "0.1.0"
description = "Local daemon for visualising ZX diagrams"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "matplotlib>=3.9.0",
    "pyzx>=0.9.0",
]

[dependency-groups]
dev = [
    "pixelmatch>=0.3",
    "pytest>=8",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (can reduce readability)
]

[tool.ruff.lint.isort]
known-first-party = ["lib"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:FigureCanvasAgg is non-interactive:UserWarning",
]